Fix block/item registry key requirement and missing item translation keys for 1.21.3